Add unit and integration test coverage

--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,8 @@
   <script>
     // Load and run all tests (.html, .js):
     WCT.loadSuites([
-      "unit/rise-data-counter.html"
+      "unit/rise-data-counter.html",
+      "integration/rise-data-counter.html"
     ]);
   </script>
 </body>
