Support the completion feature

--- a/demo/src/rise-data-counter.html
+++ b/demo/src/rise-data-counter.html
@@ -33,7 +33,7 @@
 
 <body>
 
-<rise-data-counter id="rise-data-counter-01" type="down" refresh="10" date="2019-10-29">
+<rise-data-counter id="rise-data-counter-01" type="down" refresh="10" date="2020-01-01" completion="I'm done!">
 </rise-data-counter>
 
 <script>
