Support logging and reporting uptime

--- a/demo/src/rise-data-counter.html
+++ b/demo/src/rise-data-counter.html
@@ -45,6 +45,10 @@
       console.log( "data-update", evt.detail );
     } );
 
+    riseDataCounter01.addEventListener( "data-error", evt => {
+      console.log( "data-error", evt.detail );
+    } );
+
     // Uncomment if testing directly in browser
     // [ riseDataCounter01 ].forEach( el => RisePlayerConfiguration.Helpers.sendStartEvent( el ) );
   }
