--- a/e2e/rise-data-counter.html
+++ b/e2e/rise-data-counter.html
@@ -30,6 +30,9 @@
     }
   </script>
   <style>
+    body {
+      background-color: lightgray;
+    }
     .counterContainer {
       background-color: lightblue;
       border: solid 1px black;
